# Electricity-Price-Forecaster

./: .env.example  .gitignore  CLEANUP_CANDIDATES.md  INTEGRATION_GUIDE.md  README.md  pyproject.toml  run_full_pipeline.py  run_pipeline.py
dashboard/: app.py
evaluation/: backtest.py  backtest_results.json  benchmark_dam.py  dam_benchmark.json  data_quality_report.txt  final_report.txt  generate_final_report.py  granger.py  granger_results.json
features/: build_matrix.py  build_matrix_v2.py  engineer.py  engineer_v2.py
models/: calibrate_classifier.py  print_final_comparison.py  train_all_v2.py  train_baseline.py  train_classifier.py  train_enhanced.py  utils.py
notebooks/: 02_v2_models.ipynb  05_lightgbm.ipynb  06_catboost (1).ipynb  07_ngboost.ipynb  08_lstm.ipynb  09_tft.ipynb  10_chronos (1).ipynb  12_timesfm.ipynb  13_prophet.ipynb  14_sarimax.ipynb
pipelines/: base.py  eia_gas.py  eia_storage.py  ercot_da_prices.py  ercot_load.py  ercot_rt_prices.py  gdelt.py  nrc_reactors.py  weather.py
tests/: sanity_check.py  test_ercot_da_pipeline.py  test_ercot_pipeline.py
utils/: config.py  helpers.py
